<resources>
    <string name="app_name" translatable="false">LingoChat</string>
    <string name="get_started">Get Started</string>
    <string name="start_with_signing_up_or_sign_in">Start with signing up or sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="you_and_your_friends_always_connected">You and Your Friends always Connected</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="login_text"><![CDATA[Remember to get up & stretch once in a while - your friends at chat]]></string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="facebook_app_id" translatable="false">222145562436782</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb222145562436782</string>
    <string name="chats">Chats</string>
    <string name="select_contact">Select Contact</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="name_required_error">Name is required!</string>
    <string name="email_required_error">Email is required!</string>
    <string name="invalid_email_error">Enter valid email address!</string>
    <string name="password_error">Password is required!</string>
    <string name="short_password_error">Password must be at least 8 characters long!</string>
    <string name="cpassword_error">Confirm Password is required!</string>
    <string name="short_cpassword_error">Confirm Password must be at least 8 characters long!</string>
    <string name="password_mismatch_error">Confirm Password does not match Password!</string>
    <string name="sign_out">Sign Out</string>
    <string name="message">Message</string>
    <string name="select_image">Select Image</string>
    <string name="select_pdf_file">Select Pdf file</string>
    <string name="select_word_file">Select MS Word File</string>
    <string name="contact_permission_toast">Contacts Permission is required to show contacts</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_image">\"Choose Image From: \"</string>
    <string name="camera_permission">Camera is Required to Use Camera</string>
    <string name="delete_for_me">Delete for me</string>
    <string name="delete_for_all">Delete and for all</string>
    <string name="download_view">Download and View this document</string>
    <string name="delete_message">Delete Message?</string>
    <string name="view_image">View this Image</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="last_message">Last message</string>
    <string name="let_s_get_started">Let\'s Get Started!</string>
    <string name="terms_conditions">By Signing Up you are accepting our terms and conditions</string>
    <string name="images">Images</string>
    <string name="pdf_files">PDF Files</string>
    <string name="ms_word_files">MS Word Files</string>
    <string name="select_the_file">Select a File</string>
    <string name="location">Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="unknown">Unknown</string>
    <string name="view_location">View Location</string>
    <string name="video">Video</string>
    <string name="view_video">View Video</string>
    <string name="sent_image">Sent Image</string>
    <string name="logo">logo</string>
    <string name="image_for_message">Image for message</string>
    <string name="deleted_successfully">Deleted Successfully</string>
    <string name="error_occurred_while_deleting">Error Occurred while deleting</string>
    <string name="search">Search</string>

    <array name="languages">
        <item>English</item>
        <item>français</item>
        <item>Deutsch</item>
        <item>español</item>
        <item>हिन्दी</item>
    </array>

</resources>