<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartupActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            android:textColor="@color/textColor"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/start_with_signing_up_or_sign_in"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@mipmap/logo" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:elevation="10dp"
            android:onClick="signUpClicked"
            android:outlineAmbientShadowColor="@color/dark_blue"
            android:outlineSpotShadowColor="@color/dark_blue"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:shadowColor="@color/dark_blue"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/text_color_2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background_white"
            android:elevation="10dp"
            android:onClick="signInClicked"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/textColor" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>