<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/textColor"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/you_and_your_friends_always_connected"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <ImageView
                android:id="@+id/email_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="15dp"
                android:src="@mipmap/userb"
                android:tint="@color/textColor"
                app:layout_constraintBottom_toBottomOf="@id/text_input_layout"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_input_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:layout_constraintLeft_toRightOf="@id/email_image"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/email_edittext"
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/lock_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="15dp"
                android:src="@mipmap/lock"
                android:tint="@color/textColor"
                app:layout_constraintBottom_toBottomOf="@id/password_text_input_layout"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/password_text_input_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input_layout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:layout_constraintLeft_toRightOf="@id/lock_image"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/clock_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="15dp"
                android:src="@mipmap/lock"
                android:tint="@color/textColor"
                app:layout_constraintBottom_toBottomOf="@id/cpassword_text_input_layout"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/cpassword_text_input_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cpassword_text_input_layout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                app:layout_constraintLeft_toRightOf="@id/clock_image"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/cpassword_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_background"
            android:elevation="10dp"
            android:onClick="signUpClicked"
            android:outlineAmbientShadowColor="@color/dark_blue"
            android:outlineSpotShadowColor="@color/dark_blue"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:shadowColor="@color/dark_blue"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/text_color_2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/textColor" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/transparent"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:onClick="signInClicked"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>