<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity"
    android:focusableInTouchMode="true">

    <Button
        android:id="@+id/back_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        android:onClick="backClicked"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:autoSizeTextType="uniform"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:text="@string/save"
        android:onClick="saveClicked"
        android:textAllCaps="false"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:onClick="imageClicked"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:src="@mipmap/placeholder"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/back_btn" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/full_name"
        app:layout_constraintTop_toBottomOf="@id/image_view">

        <EditText
            android:id="@+id/name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:autofillHints="@string/full_name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <segmented_control.widget.custom.android.com.segmentedcontrol.SegmentedControl
        android:id="@+id/segmented_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:columnCount="5"
        app:distributeEvenly="true"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout"
        app:radius="12dp"
        app:segments="@array/languages"
        app:textVerticalPadding="6dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:onClick="signOutClicked"
        android:background="@drawable/button_background"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/segmented_control" />


</androidx.constraintlayout.widget.ConstraintLayout>